# Matrix-Control

./: .clangd  .cursorrules  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  TODO.md  compile_commands.json  configure-platform.py  setup-windows.ps1
.github/: FUNDING.yml
Data/Original/All/: All Data.syx
Data/Original/Master/: Master 1 (truncated).syx
Data/Original/Patch/: Patch 66 (truncated).syx
Data/Sent/Patch/: Patch 66 (sent).syx
Documentation/Development/: Questions-Cursor-IA.md  Testing-Strategy.md
Documentation/Development/Architecture/: Architecture.drawio  Classes.drawio  Classes.md
Documentation/Development/GUI/: GUI-Implementation-Details.md  GUI-Layout.fig  GUI-Layout.md  GUI-Optimization-Plan.md
Documentation/Development/GUI/Diagrams/: Patch-Mode-GUI-Structural-Diagram.drawio
Documentation/Development/Specifications/: Functional-Specification.md  Matrix-1000-Parameter-IDs.md  Matrix-1000-Parameters-GUI-Logic.md  Specifications.md  Technical-Specification.md  Use-Cases.md
Documentation/Development/Specifications/FR/: Cahier des Charges Fonctionnel.md  Cahier des Charges Technique.md  Cas d'utilisation.md
Documentation/References/MD/: Oberheim-Matrix-1000-Factory-Patch-Names.md  Oberheim-Matrix-1000-MIDI-SysEx-Implementation.md  Oberheim-Matrix-1000-SysEx-Messages-Examples.md  Oberheim-Matrix-1000-User-Manual-Personal-Notes.md  Oberheim-Matrix-6-6R-MIDI-SysEx-Implementation.md  Oberheim-Matrix-6R-Basic-Patch.md  Vital-Audio-Analyse-Architecture.md  Vital-Audio-Architecture-Analysis.md
IA/: PROMPT.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginFactory.cpp  PluginProcessor.cpp  PluginProcessor.h
Source/Business/MIDI/: MidiManager.cpp  MidiManager.h
Source/Business/MIDI/Exceptions/: Exceptions.h
Source/Business/MIDI/Ports/: MidiInputPort.cpp  MidiInputPort.h  MidiOutputPort.cpp  MidiOutputPort.h
Source/Business/MIDI/SysEx/: SysExConstants.h  SysExDecoder.cpp  SysExDecoder.h  SysExEncoder.cpp  SysExEncoder.h  SysExParser.cpp  SysExParser.h
Source/Business/MIDI/Transport/: MidiReceiver.cpp  MidiReceiver.h  MidiSender.cpp  MidiSender.h
Source/Business/MIDI/Utilities/: MidiLogger.cpp  MidiLogger.h
Source/Core/: PluginProcessor.cpp  PluginProcessor.h
Source/Core/Exceptions/: ExceptionPropagator.h  WidgetFactoryExceptions.h
Source/Core/Factories/: ApvtsFactory.cpp  ApvtsFactory.h
Source/Core/Loggers/: ApvtsLogger.cpp  ApvtsLogger.h  MidiLogger.cpp  MidiLogger.h
Source/Core/MIDI/: MidiManager.cpp
Source/Core/MIDI/Ports/: MidiInputPort.cpp  MidiOutputPort.cpp
Source/Core/MIDI/SysEx/: SysExConstants.h  SysExDecoder.cpp  SysExDecoder.h  SysExEncoder.cpp  SysExParser.cpp  SysExParser.h
Source/Core/MIDI/Transport/: MidiReceiver.cpp  MidiReceiver.h  MidiSender.cpp  MidiSender.h
Source/Core/MIDI/Utilities/: MidiLogger.cpp  MidiLogger.h
Source/GUI/: MainComponent.cpp  MainComponent.h  PluginEditor.cpp  PluginEditor.h
Source/GUI/Factories/: WidgetFactory.cpp  WidgetFactory.h  WidgetFactoryValidator.cpp  WidgetFactoryValidator.h
Source/GUI/OpenGL/: OpenGlAutoImageComponent.h  OpenGlComponent.cpp  OpenGlComponent.h  OpenGlImageComponent.cpp  OpenGlImageComponent.h
Source/GUI/Panels/BodyPanel/: BodyPanel.cpp  BodyPanel.h
Source/GUI/Panels/BodyPanel/MasterEditPanel/: MasterEditPanel.cpp  MasterEditPanel.h
Source/GUI/Panels/BodyPanel/MatrixModulationPanel/: MatrixModulationPanel.cpp  MatrixModulationPanel.h
Source/GUI/Panels/BodyPanel/PatchEditPanel/: PatchEditPanel.cpp  PatchEditPanel.h
Source/GUI/Panels/BodyPanel/PatchManagerPanel/: PatchManagerPanel.cpp  PatchManagerPanel.h
Source/GUI/Panels/FooterPanel/: FooterPanel.cpp  FooterPanel.h
Source/GUI/Panels/HeaderPanel/: HeaderPanel.cpp  HeaderPanel.h
Source/GUI/Panels/MainComponent/BodyPanel/: BodyPanel.cpp  BodyPanel.h
Source/GUI/Panels/MainComponent/FooterPanel/: FooterPanel.cpp  FooterPanel.h
Source/GUI/Panels/MainComponent/HeaderPanel/: HeaderPanel.cpp  HeaderPanel.h
Source/GUI/Panels/MainPanel/: MainPanel.cpp  MainPanel.h  ModulePanel.cpp  ModulePanel.h
Source/GUI/Panels/MainPanel/MasterEditPanel/: MasterEditPanel.cpp  MasterEditPanel.h
Source/GUI/Panels/Reusable/: BaseModulePanel.cpp  BaseModulePanel.h  ModulationBusPanel.cpp  ModulationBusPanel.h  ModuleHeaderPanel.cpp  ModuleHeaderPanel.h  ParameterPanel.cpp  ParameterPanel.h
Source/GUI/Skin/: Skin.cpp  Skin.h  SkinColourChart.h  SkinColours.h  SkinDefinitions.h  SkinDimensions.h  SkinFactory.cpp  SkinFactory.h  SkinFonts.h
Source/GUI/Themes/: ColourChart.h  Skin.cpp  Skin.h  SkinValues.h  Theme.cpp  Theme.h  ThemeColours.h
Source/GUI/Widgets/: Button.cpp  Button.h  ComboBox.cpp  ComboBox.h  EmptySlot.cpp  EmptySlot.h  EnvelopeDisplay.cpp  EnvelopeDisplay.h  FocusableWidget.cpp  FocusableWidget.h  GroupLabel.cpp  GroupLabel.h  HorizontalSeparator.cpp  HorizontalSeparator.h  Label.cpp  Label.h  ModulationBusHeader.cpp  ModulationBusHeader.h  ModuleHeader.cpp  ModuleHeader.h  ModuleName.cpp  ModuleName.h  MultiColumnPopupMenu.cpp  MultiColumnPopupMenu.h  NumberBox.cpp  NumberBox.h  PanelSeparator.cpp  PanelSeparator.h  ParameterLabel.cpp  ParameterLabel.h  ParameterSeparator.cpp  ParameterSeparator.h  PatchNameDisplay.cpp  PatchNameDisplay.h  PopupMenu.cpp  PopupMenu.h  PopupMenuBase.cpp  PopupMenuBase.h  PopupMenuPositioner.cpp  PopupMenuPositioner.h  (+14 more)
Source/Shared/: ApvtsFactory.cpp  ApvtsFactory.h  PluginDescriptors.cpp  PluginDescriptors.h  PluginDimensions.h  PluginDisplayNames.h  PluginIDs.h  SynthDescriptors.cpp  SynthDescriptors.h  WidgetFactory.cpp  WidgetFactory.h
Source/UI/LookAndFeel/: McLookAndFeel.cpp  McLookAndFeel.h
Source/UI/Themes/: McTheme.cpp  McTheme.h
Source/UI/Widgets/: McButton.cpp  McButton.h  McComboBox.cpp  McComboBox.h  McFocusableWidget.cpp  McFocusableWidget.h  McModuleTitle.cpp  McModuleTitle.h  McParameterLabel.cpp  McParameterLabel.h  McParameterSeparator.cpp  McParameterSeparator.h  McPopupMenu.cpp  McPopupMenu.h  McSlider.cpp  McSlider.h
Tests/: MidiManagerTests.cpp  SysExEncoderTests.cpp  SysExParserTests.cpp
(+296 files in other folders)
